--- a/AspMVCECommerce/Views/Shared/_HeadphonesCompare.cshtml
+++ b/AspMVCECommerce/Views/Shared/_HeadphonesCompare.cshtml
@@ -5,6 +5,7 @@
         @{
             var productIndex = 0;
         }
+        <tr></tr>
         <tr>
             <td style="width:200px;"></td>
             @foreach (var item in Model)
@@ -109,7 +110,7 @@
                 productIndex += 1;
                 if (productIndex == 1)
                 {
-                    <td>
+                    <td style="background-color: #ffe;">
                         <div class="product-rating">
                             @if (item.AverageRating != null)
                             {
@@ -202,7 +203,7 @@
                 productIndex += 1;
                 if (productIndex == 1)
                 {
-                    <td>
+                    <td style="background-color: #ffffde;">
                         @if (item.PromoSaleOFF > 0)
                         {
                             if (DateTime.Now >= item.PromoSaleStartDateTime && DateTime.Now <= item.PromoSaleEndDateTime)
@@ -280,7 +281,7 @@
 
                 if (productIndex == 1)
                 {
-                    <td><a>@item.Brand.Name</a>   </td>
+                    <td style="background-color: #ffe;"><a>@item.Brand.Name</a>   </td>
                 }
 
 
@@ -300,42 +301,42 @@
 
         <tr class="comparison_other_attribute_row">
             <th> <span>Are batteries included?</span> </th>
-            <td>     <span>Yes</span>   </td>
+            <td style="background-color: #ffffde;">     <span>Yes</span>   </td>
             <td>       <span>No</span>   </td>
             <td>       <span>No</span>   </td>
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th > <span>Are batteries required?</span> </th>
-            <td>     <span>Yes</span>   </td>
+            <td style="background-color: #ffe;">     <span>Yes</span>   </td>
             <td>       <span>Yes</span>   </td>
             <td>       <span>No</span>   </td>
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th > <span>Color</span> </th>
-            <td>     <span>Black</span>   </td>
+            <td style="background-color: #ffffde;">     <span>Black</span>   </td>
             <td>       <span>Black</span>   </td>
             <td>       <span>Stealth</span>   </td>
 
         </tr>
         <tr>
             <th> <span>Connectivity Technology</span> </th>
-            <td>     <span>Wireless, Wired</span>   </td>
+            <td style="background-color: #ffe;">     <span>Wireless, Wired</span>   </td>
             <td>       <span>Wireless</span>   </td>
             <td>       <span>Wireless</span>   </td>
 
         </tr>
         <tr>
             <th> <span>Fit Type</span> </th>
-            <td>     <span>Over-Ear</span>   </td>
+            <td style="background-color: #ffffde;">     <span>Over-Ear</span>   </td>
             <td>       <span>Over-Ear</span>   </td>
             <td>       <span>Over-Ear</span>   </td>
 
         </tr>
         <tr>
             <th> <span>Special Features</span> </th>
-            <td>     <span>Wired＆Wireless, Noise Isolation, Microphone Feature, Foldable, Bluetooth 5.0, 52 hours playing time, Hifi stereo sound, Lightweight, 3 EQ Modes</span>   </td>
+            <td style="background-color: #ffe;">     <span>Wired＆Wireless, Noise Isolation, Microphone Feature, Foldable, Bluetooth 5.0, 52 hours playing time, Hifi stereo sound, Lightweight, 3 EQ Modes</span>   </td>
             <td>       <span>Deep Bass Audio Output; Bluetooth 5.1 Fast and Stable Connection; Foldable Design, 0.44lb Lightweight; 55 hours long playing time.; Optional Wireless or Wired</span>   </td>
             <td>       <span>Bluetooth 4.1, Built_in Mic/ FM/ SD Card Slot; Dual Mode, Foldable, Noise Cancelling Design</span>   </td>
 
