--- a/AspMVCECommerce/Views/Shared/_TabletCompare.cshtml
+++ b/AspMVCECommerce/Views/Shared/_TabletCompare.cshtml
@@ -110,7 +110,7 @@
                 productIndex += 1;
                 if (productIndex == 1)
                 {
-                    <td>
+                    <td style="background-color: #ffe;">
                         <div class="product-rating">
                             @if (item.AverageRating != null)
                             {
@@ -203,7 +203,7 @@
                 productIndex += 1;
                 if (productIndex == 1)
                 {
-                    <td>
+                    <td style="background-color: #ffffde;">
                         @if (item.PromoSaleOFF > 0)
                         {
                             if (DateTime.Now >= item.PromoSaleStartDateTime && DateTime.Now <= item.PromoSaleEndDateTime)
@@ -281,7 +281,7 @@
 
                 if (productIndex == 1)
                 {
-                    <td><a>@item.Brand.Name</a>   </td>
+                    <td style="background-color: #ffe;"><a>@item.Brand.Name</a>   </td>
                 }
 
 
@@ -301,91 +301,91 @@
 
         <tr>
             <td style="font-weight:600;"><span>Display</span></td>
-            <td><span>7"</span></td>
+            <td style="background-color: #ffffde;"><span>7"</span></td>
             <td><span>8" HD</span></td>
             <td><span>10.1" 1080p full HD</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Resolution</span></td>
-            <td><span>1024 x 600 (171 ppi)</span></td>
+            <td style="background-color: #ffe;"><span>1024 x 600 (171 ppi)</span></td>
             <td><span>1280 x 800 (189 ppi)</span></td>
             <td><span>1920 x 1200 (224 ppi)</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Storage</span></td>
-            <td><span>16 or 32 GB (expandable by up to 512 GB)</span></td>
+            <td style="background-color: #ffffde;"><span>16 or 32 GB (expandable by up to 512 GB)</span></td>
             <td><span>16 or 32 GB (expandable by up to 400 GB)</span></td>
             <td><span>32 or 64 GB (expandable by up to 512 GB)</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>CPU</span></td>
-            <td><span>Quad-core 1.3 GHz</span></td>
+            <td style="background-color: #ffe;"><span>Quad-core 1.3 GHz</span></td>
             <td><span>Quad-core 1.3 GHz</span></td>
             <td><span>Octa-core 2.0 GHz</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>RAM</span></td>
-            <td><span>1 GB</span></td>
+            <td style="background-color: #ffffde;"><span>1 GB</span></td>
             <td><span>1.5 GB</span></td>
             <td><span>2 GB</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Battery life</span></td>
-            <td><span>Up to 7 hours</span></td>
+            <td style="background-color: #ffe;"><span>Up to 7 hours</span></td>
             <td><span>Up to 10 hours</span></td>
             <td><span>Up to 12 hours</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Ports</span></td>
-            <td><span>micro-USB (2.0)</span></td>
+            <td style="background-color: #ffffde;"><span>micro-USB (2.0)</span></td>
             <td><span>micro-USB (2.0)</span></td>
             <td><span>USB-C (2.0)</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Audio</span></td>
-            <td><span>Mono speaker</span></td>
+            <td style="background-color: #ffe;"><span>Mono speaker</span></td>
             <td><span>Dual speakers</span></td>
             <td><span>Dual speakers</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Dolby Atmos</span></td>
-            <td></td>
+            <td style="background-color: #ffffde;"></td>
             <td><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
             <td><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Hands-free with Alexa</span></td>
-            <td><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
+            <td style="background-color: #ffe;"><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
             <td><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
             <td><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Show Mode (full screen Alexa experience)</span></td>
-            <td></td>
+            <td style="background-color: #ffffde;"></td>
             <td><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
             <td><img alt="check mark" src="~/images/check.png" style="width: 25px; height: 20px;"></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Warranty and service</span></td>
-            <td><span>90-day limited warranty</span></td>
+            <td style="background-color: #ffe;"><span>90-day limited warranty</span></td>
             <td><span>90-day limited warranty</span></td>
             <td><span>1-year limited warranty</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Camera</span></td>
-            <td><span>2 MP front and rear-facing</span></td>
+            <td style="background-color: #ffffde;"><span>2 MP front and rear-facing</span></td>
             <td><span>2 MP front and rear-facing</span></td>
             <td><span>2 MP front and rear-facing</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Weight</span></td>
-            <td><span>10.1 oz (286 g)</span></td>
+            <td style="background-color: #ffe;"><span>10.1 oz (286 g)</span></td>
             <td><span>12.8 oz (363 g)</span></td>
             <td><span>17.8 oz (504 g)</span></td>
         </tr>
         <tr>
             <td style="font-weight:600;"><span>Dimensions</span></td>
-            <td><span>7.6" x 4.5" x 0.4" (192 mm x 115 mm x 9.6 mm)</span></td>
+            <td style="background-color: #ffffde;"><span>7.6" x 4.5" x 0.4" (192 mm x 115 mm x 9.6 mm)</span></td>
             <td><span>8.4" x 5.0" x 0.4" (214 mm x 128 mm x 9.7 mm)</span></td>
             <td><span>10.3" x 6.3" x 0.4" (262 mm x 159 mm x 9.8 mm)</span></td>
         </tr>
