--- a/AspMVCECommerce/Views/Shared/_SmartPhonesCompare.cshtml
+++ b/AspMVCECommerce/Views/Shared/_SmartPhonesCompare.cshtml
@@ -17,7 +17,7 @@
                 if (productIndex == 1)
                 {
                     <!-- index 1 -->
-                    <th>
+                    <th style="position:relative;">
                         <div class="a-row a-spacing-top-micro">
                             <div style="width: 180px; height: 200px;  margin: auto; ">
                                 @if (item.Images.Count > 0)
@@ -37,7 +37,16 @@
                                 }
 
                             </div>
-                        </div> <div class="a-row a-spacing-top-small"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-name" title="@item.Name">@item.Name</a></div>
+                        </div>
+                        <div class="a-row a-spacing-top-small" style="margin-bottom: 65px !important;">
+                            <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-name" title="@item.Name">@item.Name</a>
+
+                            <div class="product-details" style="width: 100%; margin-bottom: 15px !important; margin-top: 20px; bottom: 0px; position: absolute; ">
+                                <div class="add-to-cart" style="margin: auto; width: 100%; display: flex;  font-size: 12px !important; ">
+                                    <button style="margin: auto; height: 35px !important;" class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                </div>
+                            </div>
+                        </div>
                     </th>
                 }
 
@@ -46,7 +55,7 @@
                 if (productIndex == 2)
                 {
 
-                    <th>
+                    <th style="position:relative;">
                         <div class="a-row a-spacing-top-micro">
                             <div style="width: 180px; height: 200px;  margin: auto; ">
                                 @if (item.Images.Count > 0)
@@ -66,7 +75,16 @@
                                 }
 
                             </div>
-                        </div> <div class="a-row a-spacing-top-small"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-name" title="@item.Name">@item.Name</a></div>
+                        </div>
+                        <div class="a-row a-spacing-top-small" style="margin-bottom: 65px !important;">
+                            <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-name" title="@item.Name">@item.Name</a>
+
+                            <div class="product-details" style="width: 100%; margin-bottom: 15px !important; margin-top: 20px; bottom: 0px; position: absolute; ">
+                                <div class="add-to-cart" style="margin: auto; width: 100%; display: flex;  font-size: 12px !important; ">
+                                    <button style="margin: auto; height: 35px !important;" class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                </div>
+                            </div>
+                        </div>
                     </th>
                 }
 
@@ -74,7 +92,7 @@
                 if (productIndex == 3)
                 {
 
-                    <th>
+                    <th style="position:relative;">
                         <div class="a-row a-spacing-top-micro">
                             <div style="width: 180px; height: 200px;padding:5px; margin: auto;">
                                 @if (item.Images.Count > 0)
@@ -94,7 +112,16 @@
                                 }
 
                             </div>
-                        </div> <div class="a-row a-spacing-top-small"><a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-name" title="@item.Name">@item.Name</a></div>
+                        </div>
+                        <div class="a-row a-spacing-top-small" style="margin-bottom: 65px !important;">
+                            <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="product-name" title="@item.Name">@item.Name</a>
+
+                            <div class="product-details" style="width: 100%; margin-bottom: 15px !important; margin-top: 20px; bottom: 0px; position: absolute; ">
+                                <div class="add-to-cart" style="margin: auto; width: 100%; display: flex;  font-size: 12px !important; ">
+                                    <button style="margin: auto; height: 35px !important;" class="add-to-cart-btn" onclick="GetProductDetails(@(item.ProductId));"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                                </div>
+                            </div>
+                        </div>
                     </th>
                 }
                 <!-- index 4 -->
