--- a/AspMVCECommerce/Views/Home/Compare.cshtml
+++ b/AspMVCECommerce/Views/Home/Compare.cshtml
@@ -40,17 +40,35 @@
 
             <div class="col-md-12">
 
-                <div class="info-container">
-                    <div class="bd-example">
-                        <div class="alert alert-success" role="alert">
-                            <h4 class="alert-heading">Please Note:</h4>
+                @if (ViewBag.Category == "Accessories")
+                {
+                    <div class="warning-container">
+                        <div class="bd-example">
+                            <div class="alert alert-success" role="alert">
+                                <h4 class="alert-heading">System Message:</h4>
 
-                            <p class="mb-0">
-                                Some of data for product compare is randomly generated this page is for demo purpose only
-                            </p>
+                                <p class="mb-0">
+                                    Compare related product is not available for accessories
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
+                }
+                else
+                {
+                    <div class="info-container">
+                        <div class="bd-example">
+                            <div class="alert alert-success" role="alert">
+                                <h4 class="alert-heading">Please Note:</h4>
+
+                                <p class="mb-0">
+                                    Some of data for product compare is randomly generated this page is for demo purpose only
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                }
+
                 <br />
 
 
@@ -143,4 +161,102 @@
     .info-container .mb-0, .info-container .my-0 {
         margin-bottom: 0 !important;
     }
+
+
+
+    .warning-container .bd-example {
+        position: relative;
+        padding: 1rem;
+        margin: 1rem -15px 0;
+        /*        border: solid #f7f7f9;*/
+        border-width: 0.2rem 0 0;
+    }
+
+    .warning-container .alert-success {
+        color: #856404;
+        background-color: #fff3cd;
+        border-color: #ffeeba;
+    }
+
+    .warning-container .alert {
+        position: relative;
+        padding: 0.75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        border-radius: 0.25rem;
+    }
+
+    .warning-container .h4 {
+        margin-bottom: 0.5rem;
+        font-family: inherit;
+        font-weight: 500;
+        line-height: 1.2;
+        color: inherit;
+    }
+
+    .warning-container .h4, .warning-container h4 {
+        font-size: 1.5rem;
+    }
+
+    .warning-container .alert-success hr {
+        border-top-color: #b6effb;
+    }
+
+    .warning-container hr {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        border: 0;
+        border-top: 1px solid rgba(0,0,0,.1);
+    }
+
+    .warning-container hr {
+        box-sizing: content-box;
+        height: 0;
+        overflow: visible;
+    }
+
+    .warning-container .mb-0, .warning-container .my-0 {
+        margin-bottom: 0 !important;
+    }
 </style>
+
+
+
+
+
+
+@section Scripts {
+    <script type="text/javascript">
+
+                            // ADD PRODUCT TO CART
+        function AddToCart2(e, _productId) {
+            var baseUrl = '@Url.Content("~/")';
+
+            $.post(baseUrl + 'api/LineItem/AddLineItem',
+            {
+                LineItemId: 0,
+                Quantity: $('#Quantity').val(),
+                TotalPrice: parseInt($('#h3-product-price').text().replace('₱', '').replaceAll(',', '')) * parseInt($('#Quantity').val()),
+                ProductId: _productId,
+                SizeId: $('#Sizes').val(),
+                ColorId: $('#Colors').val(),
+                ShoppingCartId: 0
+            })
+            .done(function () {
+
+            // NAVIGATE TO SHOPPING CART PAGE CODE HERE
+                GetLineItems();
+
+                toastr.success('The <strong>Product</strong> record has been successfully added to shopping cart.', 'Record Added.');
+            })
+            .fail(function (xhr) {
+                toastr.error('The <strong>Product</strong> saving failed due to: ' + xhr.responseText, 'Record Add Failed.');
+            });
+
+                e.preventDefault();
+
+            }
+
+
+    </script>
+}
